apps/herbatika/src/styles/tokens/components/atoms/_herbatika-button.css
@theme static {
  --text-button-sm: var(--text-sm);
  --text-button-md: var(--text-sm);
  --text-button-lg: var(--text-md);

  --padding-button-sm: var(--spacing-100) var(--spacing-250);
  --padding-button-md: var(--spacing-100) var(--spacing-300);
  --padding-button-lg: var(--spacing-400) var(--spacing-500);

  --radius-button-sm: var(--radius-sm);
  --radius-button-md: var(--radius-sm);
  --radius-button-lg: var(--radius-sm);

  --color-button-fg-primary: var(--color-fg-reverse);
  --color-button-fg-secondary: var(--color-fg-reverse);
  --color-button-fg-tertiary: var(--color-fg-reverse);
  --color-button-fg-outlined-primary: var(--color-primary);
  --color-button-fg-outlined-secondary: var(--color-fg-primary);
  --color-button-fg-primary-light: var(--color-primary);
  --color-button-fg-secondary-light: var(--color-secondary);
  --color-button-fg-tertiary-light: var(--color-tertiary);
  --color-button-fg-danger: var(--color-fg-reverse);
  --color-button-border-secondary: var(--color-border-secondary);
  --color-button-border-tertiary: var(--color-tertiary);

  --color-button-bg-tertiary-base: var(--color-tertiary);
  --color-button-bg-tertiary-hover: var(--color-tertiary-hover);
  --color-button-bg-tertiary-active: var(--color-tertiary-active);

  --color-button-fg-primary-borderless: var(--color-primary);
  --color-button-fg-secondary-borderless: var(--color-fg-primary);
  --color-button-fg-tertiary-borderless: var(--color-tertiary);

  --text-button-sm: var(--text-sm);
  --text-button-lg: var(--text-sm);
  --border-width-button-sm: var(--border-width-sm);
  --padding-button-sm: var(--spacing-100) var(--spacing-250);
  --color-button-bg-borderless-base: transparent;

  /* herbatika specific button */

  --color-button-border-tertiary: var(--color-border-secondary);
  --color-button-bg-outlined-tertiary: var(--color-surface);
  --color-button-bg-outlined-tertiary-hover: var(--color-base);
}

